<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background_2"
    android:layout_height="match_parent"
    tools:context=".VocabularyAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtAddWord"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Word"/>

            <EditText
                android:id="@+id/txtAddTranslate"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/Translate"/>

            <EditText
                android:id="@+id/txtAddDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnBackAddVocab"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:text="@string/Back"
                    app:cornerRadius="45dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <Button
                    android:id="@+id/btnAddVocab"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/Add"
                    android:textSize="15sp"
                    app:cornerRadius="45dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>